--- a/playlist/templates/userplaylist.html
+++ b/playlist/templates/userplaylist.html
@@ -29,14 +29,14 @@
                                 </a>
                             </td>
                             <td>
-                                <a href="{% url 'playlist:editplaylist' book.pk %}">
+                                <a href="{% url 'playlist:editplaylist' playlist.pk %}">
                                     <button>
                                         Ubah
                                     </button>
                                 </a>
                             </td>
                             <td>
-                                <a href="{% url 'playlist:deleteplaylist' book.pk %}">
+                                <a href="{% url 'playlist:deleteplaylist' playlist.pk %}">
                                     <button>
                                         Hapus
                                     </button>
