--- a/royalti/templates/royalti.html
+++ b/royalti/templates/royalti.html
@@ -9,37 +9,9 @@
                 <div class="row">
                     <h2>List Royalti</h2>
                 </div>
+                <br>
                 <div class="row">
-                    <table class="min-w-full text-sm font-dark overflow-hidden" style="color:#996f59">
-                        <tbody>
-                        <tr class="border transition duration-300 ease-in-out bg-shark-700 border-996f59">
-                            <td class="whitespace-nowrap px-6 py-4">Judul Lagu</td>
-                            <td class="whitespace-nowrap px-6 py-4">Judul Album</td>
-                            <td class="whitespace-nowrap px-6 py-4">Total Play</td>
-                            <td class="whitespace-nowrap px-6 py-4">Total Download</td>
-                            <td class="whitespace-nowrap px-6 py-4">Total Royalti Didapat</td>
-                        </tr>
-                        <tr class="border transition duration-300 ease-in-out bg-shark-700 border-996f59">
-                            <td class="whitespace-nowrap px-6 py-4">Lagu1</td>
-                            <td class="whitespace-nowrap px-6 py-4">Album1</td>
-                            <td class="whitespace-nowrap px-6 py-4">3</td>
-                            <td class="whitespace-nowrap px-6 py-4">0</td>
-                            <td class="whitespace-nowrap px-6 py-4">Rp 450000</td>
-                        </tr>
-                        <tr class="border transition duration-300 ease-in-out bg-shark-700 border-996f59">
-                            <td class="whitespace-nowrap px-6 py-4">Lagu2</td>
-                            <td class="whitespace-nowrap px-6 py-4">Album2</td>
-                            <td class="whitespace-nowrap px-6 py-4">2</td>
-                            <td class="whitespace-nowrap px-6 py-4">2</td>
-                            <td class="whitespace-nowrap px-6 py-4">Rp 520000</td>
-                        </tr>
-                        <tr class="border transition duration-300 ease-in-out bg-shark-700 border-996f59">
-                            <td class="whitespace-nowrap px-6 py-4">...</td>
-                            <td class="whitespace-nowrap px-6 py-4">...</td>
-                            <td class="whitespace-nowrap px-6 py-4">...</td>
-                            <td class="whitespace-nowrap px-6 py-4">...</td>
-                            <td class="whitespace-nowrap px-6 py-4">...</td>
-                        </tr>
+                    <table class="min-w-full text-sm font-dark overflow-hidden" style="color:#996f59" id="tabel_royalti">
                     </table>
                 </div>
             </div>
@@ -47,11 +19,251 @@
     </div>
 </div>
 
+
 <style>
     td {
     border-width: 2px;
     border-color: #996f59;
+    padding:0em;
 }
+
+    .btn {
+    width:50%;
+    margin: 0.5em;
+    }
+
 </style>
+
+<script>
+    if ( "{{ lagu_label }}" !== "") {
+        listLaguString = "{{ lagu_label }}";
+        listAlbumString = "{{ album_label }}";
+        listPlayString = "{{ play_label }}";
+        listDownloadString = "{{ download_label }}";
+        listRoyaltiString = "{{ royalti_label }}";
+
+        const listLagu = listLaguString.split(", ");
+        const listAlbum = listAlbumString.split(", ");
+        const listPlay = listPlayString.split(", ");
+        const listDownload = listDownloadString.split(", ");
+        const listRoyalti = listRoyaltiString.split(", ");
+
+        const tabelUl = document.getElementById('tabel_royalti');
+
+        const trTitle = document.createElement('tr');
+            trTitle.classList.add('border', 'transition', 'duration-300', 'ease-in-out', 'bg-shark-700');
+
+            const tdTitle1 = document.createElement('td');
+            tdTitle1.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle1.textContent = "Judul Lagu";
+            trTitle.appendChild(tdTitle1);
+
+            const tdTitle2 = document.createElement('td');
+            tdTitle2.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle2.textContent = "Judul Album";
+            trTitle.appendChild(tdTitle2);
+
+            const tdTitle3 = document.createElement('td');
+            tdTitle3.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle3.textContent = "Total Play";
+            trTitle.appendChild(tdTitle3);
+
+            const tdTitle4 = document.createElement('td');
+            tdTitle4.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle4.textContent = "Total Download";
+            trTitle.appendChild(tdTitle4);
+
+            const tdTitle5 = document.createElement('td');
+            tdTitle5.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle5.textContent = "Total Royalti Didapat";
+            trTitle.appendChild(tdTitle5);
+
+        tabelUl.appendChild(trTitle);
+
+        for (let i = 0; i < listLagu.length; i++) {
+            const tr = document.createElement('tr');
+            tr.classList.add('border', 'transition', 'duration-300', 'ease-in-out', 'bg-shark-700');
+
+            const tdLagu = document.createElement('td');
+            tdLagu.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdLagu.textContent = listLagu[i].trim();
+            tr.appendChild(tdLagu);
+
+            const tdAlbum = document.createElement('td');
+            tdAlbum.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdAlbum.textContent = listAlbum[i].trim();
+            tr.appendChild(tdAlbum);
+
+            const tdPlay = document.createElement('td');
+            tdPlay.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdPlay.textContent = listPlay[i].trim();
+            tr.appendChild(tdPlay);
+
+            const tdDownload = document.createElement('td');
+            tdDownload.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdDownload.textContent = listDownload[i].trim();
+            tr.appendChild(tdDownload);
+
+            const tdRoyalti = document.createElement('td');
+            tdRoyalti.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdRoyalti.textContent = "Rp " + listRoyalti[i].trim();
+            tr.appendChild(tdRoyalti);
+
+            tabelUl.appendChild(tr);
+        }
+    } else if ( "{{ lagu_artist }}" !== "") {
+        listLaguString = "{{ lagu_artist }}";
+        listAlbumString = "{{ album_artist }}";
+        listPlayString = "{{ play_artist }}";
+        listDownloadString = "{{ download_artist }}";
+        listRoyaltiString = "{{ royalti_artist }}";
+
+        const listLagu = listLaguString.split(", ");
+        const listAlbum = listAlbumString.split(", ");
+        const listPlay = listPlayString.split(", ");
+        const listDownload = listDownloadString.split(", ");
+        const listRoyalti = listRoyaltiString.split(", ");
+
+        const tabelUl = document.getElementById('tabel_royalti');
+
+        const trTitle = document.createElement('tr');
+            trTitle.classList.add('border', 'transition', 'duration-300', 'ease-in-out', 'bg-shark-700');
+
+            const tdTitle1 = document.createElement('td');
+            tdTitle1.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle1.textContent = "Judul Lagu";
+            trTitle.appendChild(tdTitle1);
+
+            const tdTitle2 = document.createElement('td');
+            tdTitle2.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle2.textContent = "Judul Album";
+            trTitle.appendChild(tdTitle2);
+
+            const tdTitle3 = document.createElement('td');
+            tdTitle3.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle3.textContent = "Total Play";
+            trTitle.appendChild(tdTitle3);
+
+            const tdTitle4 = document.createElement('td');
+            tdTitle4.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle4.textContent = "Total Download";
+            trTitle.appendChild(tdTitle4);
+
+            const tdTitle5 = document.createElement('td');
+            tdTitle5.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle5.textContent = "Total Royalti Didapat";
+            trTitle.appendChild(tdTitle5);
+
+        tabelUl.appendChild(trTitle);
+
+        for (let i = 0; i < listLagu.length; i++) {
+            const tr = document.createElement('tr');
+            tr.classList.add('border', 'transition', 'duration-300', 'ease-in-out', 'bg-shark-700');
+
+            const tdLagu = document.createElement('td');
+            tdLagu.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdLagu.textContent = listLagu[i].trim();
+            tr.appendChild(tdLagu);
+
+            const tdAlbum = document.createElement('td');
+            tdAlbum.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdAlbum.textContent = listAlbum[i].trim();
+            tr.appendChild(tdAlbum);
+            
+            const tdPlay = document.createElement('td');
+            tdPlay.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdPlay.textContent = listPlay[i].trim();
+            tr.appendChild(tdPlay);
+
+            const tdDownload = document.createElement('td');
+            tdDownload.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdDownload.textContent = listDownload[i].trim();
+            tr.appendChild(tdDownload);
+
+            const tdRoyalti = document.createElement('td');
+            tdRoyalti.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdRoyalti.textContent = "Rp " + listRoyalti[i].trim();
+            tr.appendChild(tdRoyalti);
+
+            tabelUl.appendChild(tr);
+        }
+    } else if ( "{{ lagu_songwriter }}" !== "") {
+        listLaguString = "{{ lagu_songwriter }}";
+        listAlbumString = "{{ album_songwriter }}";
+        listPlayString = "{{ play_songwriter }}";
+        listDownloadString = "{{ download_songwriter }}";
+        listRoyaltiString = "{{ royalti_songwriter }}";
+
+        const listLagu = listLaguString.split(", ");
+        const listAlbum = listAlbumString.split(", ");
+        const listPlay = listPlayString.split(", ");
+        const listDownload = listDownloadString.split(", ");
+        const listRoyalti = listRoyaltiString.split(", ");
+
+        const tabelUl = document.getElementById('tabel_royalti');
+
+        const trTitle = document.createElement('tr');
+            trTitle.classList.add('border', 'transition', 'duration-300', 'ease-in-out', 'bg-shark-700');
+
+            const tdTitle1 = document.createElement('td');
+            tdTitle1.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle1.textContent = "Judul Lagu";
+            trTitle.appendChild(tdTitle1);
+
+            const tdTitle2 = document.createElement('td');
+            tdTitle2.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle2.textContent = "Judul Album";
+            trTitle.appendChild(tdTitle2);
+
+            const tdTitle3 = document.createElement('td');
+            tdTitle3.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle3.textContent = "Total Play";
+            trTitle.appendChild(tdTitle3);
+
+            const tdTitle4 = document.createElement('td');
+            tdTitle4.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle4.textContent = "Total Download";
+            trTitle.appendChild(tdTitle4);
+
+            const tdTitle5 = document.createElement('td');
+            tdTitle5.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdTitle5.textContent = "Total Royalti Didapat";
+            trTitle.appendChild(tdTitle5);
+
+        tabelUl.appendChild(trTitle);
+
+        for (let i = 0; i < listLagu.length; i++) {
+            const tr = document.createElement('tr');
+            tr.classList.add('border', 'transition', 'duration-300', 'ease-in-out', 'bg-shark-700');
+
+            const tdLagu = document.createElement('td');
+            tdLagu.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdLagu.textContent = listLagu[i].trim();
+            tr.appendChild(tdLagu);
+
+            const tdAlbum = document.createElement('td');
+            tdAlbum.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdAlbum.textContent = listAlbum[i].trim();
+            tr.appendChild(tdAlbum);
+
+            const tdPlay = document.createElement('td');
+            tdPlay.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdPlay.textContent = listPlay[i].trim();
+            tr.appendChild(tdPlay);
+
+            const tdDownload = document.createElement('td');
+            tdDownload.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdDownload.textContent = listDownload[i].trim();
+            tr.appendChild(tdDownload);
+
+            const tdRoyalti = document.createElement('td');
+            tdRoyalti.classList.add('whitespace-nowrap', 'px-6', 'py-4');
+            tdRoyalti.textContent = "Rp " + listRoyalti[i].trim();
+            tr.appendChild(tdRoyalti);
+
+            tabelUl.appendChild(tr);
+        }
+    }
+</script>
 
 {% endblock content %}
