--- a/playlist/templates/userplaylist.html
+++ b/playlist/templates/userplaylist.html
@@ -22,7 +22,7 @@
                             <td>{{playlist.total}}</td>
                             <td>{{playlist.duration}}</td>
                             <td>
-                                <a href="{% url 'song:songdetail' %}">
+                                <a href="{% url 'playlist:playlistdetail' %}">
                                     <button>
                                         Detail
                                     </button>
