--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -101,7 +101,7 @@
                         <a href="{% url 'dashboard:search_bar' %}" class="nav-link">Search for Content</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Playlist</a>
+                        <a href="{% url 'playlist:userplaylist' %}" class="nav-link">Playlist</a>
                     </li>
                     <li class="nav-item">
                         <a href="{% url 'user:langganan_paket' %}" class="nav-link">Pricing</a>
@@ -133,7 +133,7 @@
                         <a href="{% url 'dashboard:search_bar' %}" class="nav-link">Search for Content</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Playlist</a>
+                        <a href="{% url 'playlist:userplaylist' %}" class="nav-link">Playlist</a>
                     </li>
                     <li class="nav-item">
                         <a href="{% url 'user:langganan_paket' %}" class="nav-link">Pricing</a>
