--- a/user/templates/pembayaran_paket.html
+++ b/user/templates/pembayaran_paket.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
 {% block content %}
     <!-- Content -->
     <div class="container mt-5">
@@ -26,19 +25,23 @@
             </div>
             <div class="column mt-5">
                 <h4 class="text-center">Metode Pembayaran:</h4>
-                <div class="form-group">
-                    <select style="width: auto;" class="form-control mx-auto">
-                        <option>Transfer Bank</option>
-                        <option>Kartu Kredit</option>
-                        <option>E-Wallet</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row justify-content-center mt-4"> <!-- Baris baru untuk tombol -->
-                <div class="text-center">
-                    <a style="width: 20%;" href="{% url 'user:langganan_paket' %}" class="btn btn-primary">Kembali</a>
-                    <button style="width: 20%;" class="btn btn-primary">Bayar</button>
-                </div>
+                <form method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <select name="payment_method" style="width: auto;" class="form-control mx-auto" required>
+                            <option value="">Pilih Metode Pembayaran</option>
+                            <option value="Transfer Bank">Transfer Bank</option>
+                            <option value="Kartu Kredit">Kartu Kredit</option>
+                            <option value="E-Wallet">E-Wallet</option>
+                        </select>
+                    </div>
+                    <div class="row justify-content-center mt-4"> 
+                        <div class="text-center">
+                            <a style="width: 20%;" href="{% url 'user:langganan_paket' %}" class="btn btn-primary">Kembali</a>
+                            <button style="width: 20%;" type="submit" class="btn btn-primary">Bayar</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
