--- a/podcast/templates/createPodcast.html
+++ b/podcast/templates/createPodcast.html
@@ -30,12 +30,12 @@
                     </select>
                     </div>
                 </div>
-                <div class="mb-2 row">
+                <!-- <div class="mb-2 row">
                     <label class="col-sm-1 col-form-label fw-semibold" >Durasi</label>
                     <div class="col-sm-11">
                         <input class="form-control" type="text" name='durasi' aria-label="default input example">
                     </div>
-                </div>
+                </div> -->
                 <div class="mb-2 row">
                     <div class="col-sm-12 d-flex justify-content-center">
                         <button type="submit" class="btn btn-primary">Buat Podcast</button>
