--- a/podcast/templates/createPodcast.html
+++ b/podcast/templates/createPodcast.html
@@ -21,12 +21,9 @@
                     <div class="col-sm-11">
                     <select class="form-select fc-primary" name="genre">
                         <option selected>Pilih Genre</option>
-                        <option value="True Crime" >True Crime</option>
-                        <option value="Personal Stories">Personal Stories</option>
-                        <option value="Culture">Culture</option>
-                        <option value="Society" >Society</option>
-                        <option value="Sports">Sports</option>
-                        <option value="Culture">Culture</option>
+                        {% for genre in genres %}
+                        <option value="{{ genre.genre }}">{{ genre.genre }}</option>
+                        {% endfor %}
                     </select>
                     </div>
                 </div>
